fix gson tests